rds.tf
resource "aws_db_instance" "default" {
  allocated_storage    = 10
  db_name              = "mydb"
  engine               = "mysql"
  engine_version       = "8.0"
  instance_class       = "db.t3.micro"
  username             = "3 Tier Architecture DB"
  password             = "pragra123"
  parameter_group_name = "default.mysql8.0"
  db_subnet_group_name = [aws_subnet.private_subnet_1c.id, aws_subnet.private_subnet_2c.id]
  skip_final_snapshot  = true
  deletion_protection = false

}
