vpc.tf
########################################################################################
#Create VPC
########################################################################################
resource "aws_vpc" "dev_vpc" {
  cidr_block           = var.dev_vpc
  enable_dns_hostnames = true

  tags = {
    Name = "dev_vpc"
  }
}
